--- a/src/views/partials/reviews.hbs
+++ b/src/views/partials/reviews.hbs
@@ -1,1 +1,11 @@
-module.exports = 
+{{#if reviews}}
+{{#each reviews}} <center>
+<div class="eventitem"> 
+<center><h1 class="eventitemspan">{{username}}</h1></center>
+<h3 class="eventitemspan">{{revtext}}</h3>
+</div></center></a>
+
+{{/each}}
+{{else}}
+<center><h1 class="eventitemspan">No results found</h1></center>
+{{/if}}
