Helper functions and attends rel #14 #19

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -41,3 +41,12 @@
 
     </div>
     </head>
+ {{!-- <div id="create-event-container">
+        <form id="create-event-form" class="create-event-container">
+            <input type="text" name="Image URL" autocomplete="off" placeholder="Image URL" />
+            <input type="text" name="Event title" autocomplete="off" placeholder="Event title" />
+            <input type="date" name="Event date" autocomplete="off" placeholder="Event date" />
+            <input type="text" name="Event description" autocomplete="off" placeholder="Event description" />
+            <input type="submit" name="Create event" value="Create event" />
+        </form>
+    </div> --}}
