--- a/src/views/event.hbs
+++ b/src/views/event.hbs
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 
 <body>
-    <h1>{{title}}</h1>
-    <img src="{{pic}}" />
-    {{descr}}
-    {{id}}
+    <center>
+        {{#if id}}
+        <div class="eventitem event-container">
+            <h1 class="eventitemspan">{{title}}</h1>
+            <img class="eventitemimg" src="{{pic}}" />
+            <h2>{{descr}}</h2>
+            {{> comments this}}
+            {{> attends this}}
+            {{> reviews this}}
+        </div>
+        {{/if}}
+    </center>
 </body>
 
 </html>
