--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -10,15 +10,21 @@
     <div class="nav-container">
         <nav>
             <ul class="navlist">
-                <li id="home" class="homenav navitem">
-                    HOME
-                </li>
-                <li id="history" class="historynav navitem">
-                    HISTORY
-                </li>
-                <li id="post" class="postnav navitem">
-                    POST
-                </li>
+                <a href="/">
+                    <li id="home" class="homenav navitem">
+                        HOME
+                    </li>
+                </a>
+                <a href="/history">
+                    <li id="history" class="historynav navitem">
+                        HISTORY
+                    </li>
+                </a>
+                <a>
+                    <li id="post" class="postnav navitem">
+                        POST
+                    </li>
+                </a>
             </ul>
         </nav>
     </div>
