--- a/src/views/partials/attends.hbs
+++ b/src/views/partials/attends.hbs
@@ -1,11 +1,15 @@
-
 {{#if attends}}
 {{#each attends}} <center>
-<div class="eventitem"> 
-<img src="{{pic}}" alt="" class="eventitemimg">
-<center><h1 class="eventitemspan">{{username}}</h1></center>
-</div></center>
+    <div class="eventitem">
+        <img src="{{pic}}" alt="" class="eventitemimg">
+        <center>
+            <h1 class="eventitemspan">{{username}}</h1>
+        </center>
+    </div>
+</center>
 {{/each}}
 {{else}}
-<center><h1 class="eventitemspan">No attendees yet</h1></center>
+<center>
+    <h1 class="eventitemspan">No attendees yet</h1>
+</center>
 {{/if}}
