--- a/src/views/partials/attends.hbs
+++ b/src/views/partials/attends.hbs
@@ -1,7 +1,7 @@
 {{#if attends}}
 {{#each attends}} <center>
     <div class="eventitem">
-        <img src="{{pic}}" alt="" class="eventitemimg">
+        <img src="{{pic}}" alt="" class="attenditemimg">
         <center>
             <h1 class="eventitemspan">{{username}}</h1>
         </center>
