--- a/src/views/partials/attends.hbs
+++ b/src/views/partials/attends.hbs
@@ -1,6 +1,7 @@
+ <div class="attend">
 {{#if attends}}
 {{#each attends}} <center>
-    <div class="eventitem">
+    <div class="attenditem">
         <img src="{{pic}}" alt="" class="attenditemimg">
         <center>
             <h1 class="eventitemspan">{{username}}</h1>
@@ -12,4 +13,4 @@
 <center>
     <h1 class="eventitemspan">No attendees yet</h1>
 </center>
-{{/if}}
+{{/if}}</div>
