--- a/src/views/partials/comments.hbs
+++ b/src/views/partials/comments.hbs
@@ -1,11 +1,9 @@
-{{#if comments}}
-{{#each comments}} <center>
-<div class="eventitem"> 
-<center><h1 class="eventitemspan">{{username}}</h1></center>
-<h3 class="eventitemspan">{{comtext}}</h3>
-</div></center></a>
-
-{{/each}}
-{{else}}
-<center><h1 class="eventitemspan">No comments found</h1></center>
-{{/if}}
+<div class="eventitem">
+    {{#if comments}}
+    {{#each comments}}
+    <center>
+        <h3 class="eventitemspan" align="left">{{username}}:{{comtext}}</h3>
+    </center>
+    {{/each}}
+    {{/if}}
+</div>
