--- a/src/views/partials/reviews.hbs
+++ b/src/views/partials/reviews.hbs
@@ -1,11 +1,9 @@
-{{#if reviews}}
-{{#each reviews}} <center>
-<div class="eventitem"> 
-<center><h1 class="eventitemspan">{{username}}</h1></center>
-<h3 class="eventitemspan">{{revtext}}</h3>
-</div></center></a>
-
-{{/each}}
-{{else}}
-<center><h1 class="eventitemspan">No reviews found</h1></center>
-{{/if}}
+<div class="eventitem">
+    {{#if reviews}}
+    {{#each reviews}}
+    <center>
+        <h3 class="eventitemspan" align="left">{{username}}: {{revtext}}</h3>
+    </center>
+    {{/each}}
+    {{/if}}
+</div>
